--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,38 @@
+version: '3.8'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
+  app:
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    container_name: symfony_app
+    restart: unless-stopped
+    working_dir: /var/www/html
+    volumes:
+      - .:/var/www/html
+    networks:
+      - symfony_network
+
+  webserver:
+    image: nginx:alpine
+    container_name: symfony_webserver
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - .:/var/www/html
+      - ./docker/nginx/conf/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - symfony_network
+    depends_on:
+      - app
+
+  db:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
+    container_name: symfony_db
+    restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
       POSTGRES_USER: ${POSTGRES_USER:-app}
     healthcheck:
@@ -15,11 +42,21 @@ services:
       start_period: 60s
     volumes:
       - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+    networks:
+      - symfony_network
+
+  redis:
+    image: redis:alpine
+    container_name: symfony_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    networks:
+      - symfony_network
 
 volumes:
-###> doctrine/doctrine-bundle ###
   database_data:
-###< doctrine/doctrine-bundle ###
+
+networks:
+  symfony_network:
+    driver: bridge
